--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -20,6 +20,10 @@ A new  preventative aides drug (triUmpsal) is under test in clinical trials. Con
 # Methods
 
 <!--Decide on your methods:  use "variable analysis" or other appropriate descriptors.  Make sure to choose at least one graphical method and at least one numerical method. Discuss what data manipulations may be needed for example subsetting or other binning procedures and what sort of graphical displays and inferential tools will be used!-->
+We need to subset of the data that consists of just females.
+```{r}
+females<-filter(triUmp,gender=="F")
+```
 
 # Results
 
@@ -30,10 +34,26 @@ A new  preventative aides drug (triUmpsal) is under test in clinical trials. Con
 ### Graphical Descriptive Results
 
 <!--Graphical results here.  Make sure to show your code.  Provide appropriate labels for axes, giving units if possible, and provide a good title for the graph, too.  Use the graphical results to describe the patterns if any that exist in the data as focused toward the research question. Bottom line is to explain the features of the graph that are relevant to conforming or departing to what is expected by your null hypothesis !-->
+```{r}
+barchartGC(~infected + treatment,data=females)
+barchartGC(~infected + treatment,data=females, type="percent")
+
+```
+
+
+According to the bar graph, medication did not seem to work in the female population. More women taking the drug git aids vs the females who took the placebo.  
 
 ### Numerical Descriptive Results
 
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
+```{r}
+table1 <- xtabs(~infected + treatment, data=females)
+rowPerc(table1)
+colPerc(table1)
+```
+
+
+In the data above, you can observe that 58% of women who took triUmpsal resulted in having aids, whereas 41% of people who took the placebo got aids. More people who took triUmpsal got aids vs women taking the placebo. 
 
 ## Inferential Results
 
