--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -58,6 +58,11 @@ In the data above, you can observe that 58% of women who took triUmpsal resulted
 ## Inferential Results
 
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
+```{r}
+chisq.test(table1)
+chisqtestGC(table1)
+fisher.test(table1)
+```
 
 
 # Discussion and Conclusion
